NF_add_CA: added files with xpath

--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,10 +1,7 @@
 brands:
 
-- name: firstindex_ca
-  config_file: firstindex_ca.yml
-- name: sitalix_ca
-  config_file: sitalix_ca.yml
-
+- name: coinstec_ca
+  config_file: coinstec_ca.yml
 
 
 
