--- a/src/test/python/resources/config/brands10.yml
+++ b/src/test/python/resources/config/brands10.yml
@@ -1,8 +1,3 @@
 brands:
-
-#- name: kontofx
-#  config_file: kontofx.yml
-- name: xtraderfx
-  config_file: xtraderfx.yml
-- name: 2mercados
-  config_file: 2mercados.yml
+- name: safemarkets_ca
+  config_file: safemarkets_ca.yml
