--- a/src/test/python/resources/config/brands11.yml
+++ b/src/test/python/resources/config/brands11.yml
@@ -1,8 +1,4 @@
 brands:
 
-- name: b-finance
-  config_file: b-finance.yml
-- name: eafx
-  config_file: eafx.yml
-- name: gxfx
-  config_file: gxfx.yml
+- name: optionstarsglobal_ca
+  config_file: optionstarsglobal_ca.yml
