--- a/src/test/python/resources/config/brands12.yml
+++ b/src/test/python/resources/config/brands12.yml
@@ -1,6 +1,3 @@
 brands:
-
-- name: tradospot
-  config_file: tradospot.yml
-- name: mpcrypto
-  config_file: mpcrypto.yml
+- name: q8trade_ca
+  config_file: q8trade_ca.yml
