--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,9 +1,7 @@
 brands:
 
-- name: firstindex_ca
-  config_file: firstindex_ca.yml
-- name: sitalix_ca
-  config_file: sitalix_ca.yml
+- name: swisscci_ca
+  config_file: swisscci_ca.yml
 
 
 
