--- a/src/test/python/resources/config/brands5.yml
+++ b/src/test/python/resources/config/brands5.yml
@@ -1,6 +1,3 @@
 brands:
-
-- name: firstindex_ca
-  config_file: firstindex_ca.yml
-- name: sitalix_ca
-  config_file: sitalix_ca.yml
+- name: 4xfx_ca
+  config_file: 4xfx_ca.yml
