--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,4 +1,5 @@
 brands:
-
-- name: itrader_ca
-  config_file: itrader_ca.yml
+- name: triomarkets_ca
+  config_file: triomarkets_ca.yml
+- name: kayafx_ca
+  config_file: kayafx_ca.yml
