--- a/src/test/python/resources/config/brands5.yml
+++ b/src/test/python/resources/config/brands5.yml
@@ -1,4 +1,5 @@
 brands:
-
-- name: triomarkets_ca
-  config_file: triomarkets_ca.yml
+- name: brokerxp_ca
+  config_file: brokerxp_ca.yml
+- name: fxpmarkets_ca
+  config_file: fxpmarkets_ca.yml
