--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,5 +1,15 @@
 brands:
-- name: itrader_ca
-  config_file: itrader_ca.yml
-- name: stoxmarket_ca
-  config_file: stoxmarket_ca.yml
+- name: itraderglob_ca
+  config_file: itraderglob_ca.yml
+- name: soarfx_ca
+  config_file: soarfx_ca.yml
+- name: brokerxp_ca
+  config_file: brokerxp_ca.yml
+- name: fxpmarkets_ca
+  config_file: fxpmarkets_ca.yml
+- name: mlnfx_ca
+  config_file: mlnfx_ca.yml
+- name: kbcapitals_ca
+  config_file: kbcapitals_ca.yml
+- name: finmarket_ca
+  config_file: finmarket_ca.yml
