NF_add_CA: added files with xpath

--- a/src/test/python/resources/config/brands10.yml
+++ b/src/test/python/resources/config/brands10.yml
@@ -1,3 +1,4 @@
 brands:
-- name: safemarkets_ca
-  config_file: safemarkets_ca.yml
+
+- name: optionstarsglobal_ca
+  config_file: optionstarsglobal_ca.yml
