NF_add_CA: added files with xpath

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,8 @@
 brands:
-
-- name: royal_cfds_ca
-  config_file: royal_cfd_ca.yml
+- name: 2mercados_ca
+  config_file: 2mercados_ca.yml
+#- name: royal_cfds_ca
+#  config_file: royal_cfd_ca.yml
 
 
 
