--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,3 +1,5 @@
 brands:
-- name: highfx
-  config_file: highfx.yml
+#- name: highfx
+#  config_file: highfx.yml
+- name: triomarkets
+  config_file: triomarkets.yml
