OF_add_changes_Michael: add delete affiliate

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,6 +1,6 @@
 brands:
 
-#- name: goldenmarkets
-#  config_file: goldenmarkets.yml
-- name: safemarkets
-  config_file: safemarkets.yml
+- name: goldenmarkets
+  config_file: goldenmarkets.yml
+#- name: safemarkets
+#  config_file: safemarkets.yml
