OF_add_changes_Michael: updates in BrandsXpath/default.yml

--- a/src/main/python/ui/crm/model/BrandsXpath/jonesmutual_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/jonesmutual_xpath.yml
@@ -16,3 +16,6 @@ FinancialTransactionsPage:
   modified_time_element: "(//*[@id='listBody']//tr/td[10])[%s]"
 ClientProfilePage:
   deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
+AffiliatePage:
+  button_plus: "//div[@class='form-group']/button[@class='btn btn-primary']"
+  methods_drop_down: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[5]/div[2]/filter-multi-select/div/div[1]"
