--- a/src/main/python/ui/crm/model/BrandsXpath/uprofx_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/uprofx_xpath.yml
@@ -1,3 +1,4 @@
 AffiliatePage:
   countrys: "//span[@class = 'hovered-option'][contains(text(),'%s')]"
   methods: "//span[@class = 'hovered-option'][contains(text(),'%s')]"
+  trash_button: "//span[@class='glyphicon glyphicon-trash cursor-pointer']"
