--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -11,11 +11,11 @@ brands:
 #  config_file: gmo.yml
 
 
-
-- name: highfx
-  config_file: highfx.yml
-- name: triomarkets
-  config_file: triomarkets.yml
+#
+#- name: highfx
+#  config_file: highfx.yml
+#- name: triomarkets
+#  config_file: triomarkets.yml
 #- name: rimarkets
 #  config_file: rimarkets.yml
 #- name: itrader_global
@@ -32,5 +32,5 @@ brands:
 #  config_file: kbcapitals.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
-#- name: brokerxp
-#  config_file: brokerxp.yml
+- name: brokerxp
+  config_file: brokerxp.yml
