--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -34,7 +34,7 @@ FirstLeadInfo:
   birthday: "1970-01-01"
   citizenship: "German"
   first_password: "Abcd1234"
-  first_currency: "USD"
+  first_currency: "EUR"
   filter_name: "Test Leads"
 SecondLeadInfo:
   first_name: "Sam"
