--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -2,10 +2,10 @@ brands:
 
 - name: goldenmarkets
   config_file: goldenmarkets.yml
-- name: safemarkets
-  config_file: safemarkets.yml
-- name: B-TraderFX
-  config_file: b-traderfx.yml
+#- name: safemarkets
+#  config_file: safemarkets.yml
+#- name: B-TraderFX
+#  config_file: b-traderfx.yml
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
 #- name: jonesmutual
