--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,10 +1,10 @@
 tests_config:
 
   ####General
-- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
-  class: FilterModulesTest
-  tests:
-    - test_create_filter_clients_module
+#- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
+#  class: FilterModulesTest
+#  tests:
+#    - test_create_filter_clients_module
 #    - test_create_filter_documents_module
 #    - test_create_filter_leads_module
 #    - test_create_filter_help_desk
@@ -68,10 +68,10 @@ tests_config:
 #  class: TradingAccountCrmTest
 #  tests:
 #    - test_crm_edit_trading_account  # edit trading account
-#- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
-#  class: AffiliateModule
-#  tests:
-#     - test_create_affiliate
+- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
+  class: AffiliateModule
+  tests:
+     - test_create_affiliate
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
 #  class: CalendarView
 #  tests:
