--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -22,6 +22,7 @@ FirstLeadInfo:
   first_tittle: "tittle test"
   first_lead_source: "Conference"
   first_lead_status: "R - New"
+  first_lead_status_no_interest: "New"
   first_lead_status_new: "New"
   first_lead_status_new_lead: "New Lead"
   first_lead_status_c_new: "C - New"
@@ -53,6 +54,7 @@ SecondLeadInfo:
   phone: "333333"
   first_tittle: "second tittle test"
   first_lead_source: "Conference"
+  first_lead_status_no_interest: "No interest"
   first_lead_status: "B - No interest"
   first_lead_status_new: "Not interested"
   first_lead_status_new_lead: "New Lead"
