--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -22,6 +22,8 @@ FirstLeadInfo:
   first_tittle: "tittle test"
   first_lead_source: "Conference"
   first_lead_status: "R - New"
+  gmo_status: "New"
+  first_lead_status_test: "R - New"
   first_lead_status_no_interest: "New"
   first_lead_status_new: "New"
   first_lead_status_new_lead: "New Lead"
@@ -53,7 +55,9 @@ SecondLeadInfo:
   first_descriptions: "Second description test"
   phone: "333333"
   first_tittle: "second tittle test"
+  gmo_status: "Test"
   first_lead_source: "Conference"
+  first_lead_status_test: "Test"
   first_lead_status_no_interest: "No interest"
   first_lead_status: "B - No interest"
   first_lead_status_new: "Not interested"
@@ -68,7 +72,8 @@ SecondLeadInfo:
 client_1:
   test_filter: "Test Clients"
   client_status_1: "R - New"
-  client_status_B: "B - Test"
+  gmo_status: "New"
+  client_status_B: "Test"
   client_status_C: "C - New"
   client_status_T: "Test"
   client_status_F: "F - New"
