NF_add_api_tests_23_01: added new tests: Autorization Process and Create a new customer	for goldenmarkets

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,8 +1,7 @@
 brands:
-#- name: mpcrypto
-#  config_file: mpcrypto.yml
-#- name: goldenmarkets
-#  config_file: goldenmarkets.yml
+
+- name: goldenmarkets
+  config_file: goldenmarkets.yml
 #- name: safemarkets
 #  config_file: safemarkets.yml
 #- name: b-traderfx
@@ -74,9 +73,11 @@ brands:
 #  config_file: olympusmarkets.yml
 #- name: privat-trade
 #  config_file: privat-trade.yml
-- name: swiftcfd
-  config_file: swiftcfd.yml
+#- name: swiftcfd
+#  config_file: swiftcfd.yml
 #- name: tfxgo
 #  config_file: tfxgo.yml
 #- name: uprofx
 #  config_file: uprofx.yml
+#- name: mpcrypto
+#  config_file: mpcrypto.yml
