--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -9,10 +9,6 @@ brands:
 #  config_file: otcapital.yml
 #- name: gmo
 #  config_file: gmo.yml
-- name: highfx
-  config_file: highfx.yml
-
-
 #- name: triomarkets
 #  config_file: triomarkets.yml
 #- name: rimarkets
@@ -31,7 +27,7 @@ brands:
 #  config_file: kbcapitals.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
-#- name: brokerxp
-#  config_file: brokerxp.yml
+- name: brokerxp
+  config_file: brokerxp.yml
 #- name: fm-fx
 #  config_file: fm-fx.yml
