--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,12 +1,12 @@
 brands:
 #- name: mpcrypto
 #  config_file: mpcrypto.yml
-#- name: goldenmarkets
-#  config_file: goldenmarkets.yml
+- name: goldenmarkets
+  config_file: goldenmarkets.yml
 #- name: safemarkets
 #  config_file: safemarkets.yml
-#- name: b-traderfx
-#  config_file: b-traderfx.yml
+- name: b-traderfx
+  config_file: b-traderfx.yml
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
 #- name: jonesmutual
@@ -74,8 +74,8 @@ brands:
 #  config_file: olympusmarkets.yml
 #- name: privat-trade
 #  config_file: privat-trade.yml
-- name: swiftcfd
-  config_file: swiftcfd.yml
+#- name: swiftcfd
+#  config_file: swiftcfd.yml
 #- name: tfxgo
 #  config_file: tfxgo.yml
 #- name: uprofx
