--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -5,90 +5,90 @@ tests_config:
   class: FilterModulesTest
   tests:
     - test_create_filter_clients_module
-#    - test_create_filter_documents_module
-#    - test_create_filter_leads_module
-#    - test_create_filter_help_desk
-#    - test_create_filter_trading_account_module
-###  #Leads
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-#  class: TabLeadsModuleCRM
-#  tests:
-#    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-#  directive: reload_configuration
-#  class: LeadModuleTest
-#  tests:
-#    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
-#    - test_edit_lead
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-#  directive: reload_configuration
-#  class: LeadModuleTest
-#  tests:
-#    - test_perform_convert_lead   # Creates a lead and converts it to a client
-##Clients
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
-#  class: SearchingClientsTestCRM
-#  tests:
-#    - test_make_searching_client_module   # Searches for a client.
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
-#  class: AddInteraction
-#  tests:
-#    - test_add_interaction  # Adds an interaction for a client
-#    - test_interaction_search   # Searches for an interaction for a client. Validates that only one result is returned.
-#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
-#  class: AddEventTaskModule
-#  tests:
-#    - test_add_event
-#    - test_edit_event
-##MT4
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-#  class: TradingAccountCrmTest
-#  tests:
-#    - test_crm_open_trading_account  # open a new trading account
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Check_Password
-#  class: CheckPasswordTestCRM
-#  tests:
-#    - test_check_client_password_crm  # check the client account password
-#    - test_check_mt4_password_crm   # check the MT4 account password
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Change_Password
-#  class: ChangePasswordTestCRM
-#  tests:
-#    - test_change_client_password_from_crm  # change a client account password from the crm
-#    - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
-#  class: DepositTestCRM
-#  tests:
-#    - test_make_deposit_crm  # make a deposit into a trading account from the crm
-#    - test_make_deposit_for_client_crm
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
-#  class: CreditInTestCRM
-#  tests:
-#    - test_make_credit_in_from_crm
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-#  class: TradingAccountCrmTest
-#  tests:
-#    - test_crm_edit_trading_account  # edit trading account
-#- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
-#  class: AffiliateModule
-#  tests:
-#     - test_create_affiliate
-#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
-#  class: CalendarView
-#  tests:
-#     - test_check_add_tasks_calendar_view #preconditions convert lead
-#     - test_check_day_tab
-#     - test_check_month_tab
-#     - test_check_week_tab
-#- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
-#  class: TabFinancialTransaction
-#  tests:
-#    - test_check_all_tab_from_financial_transactions
-#    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
-#    - test_check_search_via_button # Check search using search button
-####Campaign module
-#- module: src.test.python.ui.automation.implementation.crm.tests_compaigns_module.Test_Campaigns_Module
-#  class: CampaignsModuleTest
-#  tests:
-#    - test_create_campaign
-#    - test_edit_campaign
-#    - test_delete_campaign
+    - test_create_filter_documents_module
+    - test_create_filter_leads_module
+    - test_create_filter_help_desk
+    - test_create_filter_trading_account_module
+##  #Leads
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
+  class: TabLeadsModuleCRM
+  tests:
+    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+  directive: reload_configuration
+  class: LeadModuleTest
+  tests:
+    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
+    - test_edit_lead
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+  directive: reload_configuration
+  class: LeadModuleTest
+  tests:
+    - test_perform_convert_lead   # Creates a lead and converts it to a client
+#Clients
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
+  class: SearchingClientsTestCRM
+  tests:
+    - test_make_searching_client_module   # Searches for a client.
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
+  class: AddInteraction
+  tests:
+    - test_add_interaction  # Adds an interaction for a client
+    - test_interaction_search   # Searches for an interaction for a client. Validates that only one result is returned.
+- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
+  class: AddEventTaskModule
+  tests:
+    - test_add_event
+    - test_edit_event
+#MT4
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+  class: TradingAccountCrmTest
+  tests:
+    - test_crm_open_trading_account  # open a new trading account
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Check_Password
+  class: CheckPasswordTestCRM
+  tests:
+    - test_check_client_password_crm  # check the client account password
+    - test_check_mt4_password_crm   # check the MT4 account password
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Change_Password
+  class: ChangePasswordTestCRM
+  tests:
+    - test_change_client_password_from_crm  # change a client account password from the crm
+    - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
+  class: DepositTestCRM
+  tests:
+    - test_make_deposit_crm  # make a deposit into a trading account from the crm
+    - test_make_deposit_for_client_crm
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
+  class: CreditInTestCRM
+  tests:
+    - test_make_credit_in_from_crm
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+  class: TradingAccountCrmTest
+  tests:
+    - test_crm_edit_trading_account  # edit trading account
+- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
+  class: AffiliateModule
+  tests:
+     - test_create_affiliate
+- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
+  class: CalendarView
+  tests:
+     - test_check_add_tasks_calendar_view #preconditions convert lead
+     - test_check_day_tab
+     - test_check_month_tab
+     - test_check_week_tab
+- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
+  class: TabFinancialTransaction
+  tests:
+    - test_check_all_tab_from_financial_transactions
+    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
+    - test_check_search_via_button # Check search using search button
+###Campaign module
+- module: src.test.python.ui.automation.implementation.crm.tests_compaigns_module.Test_Campaigns_Module
+  class: CampaignsModuleTest
+  tests:
+    - test_create_campaign
+    - test_edit_campaign
+    - test_delete_campaign
