--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,6 +1,6 @@
 brands:
-#- name: kayafx
-#  config_file: kaya_fx.yml
+- name: kayafx
+  config_file: kaya_fx.yml
 #- name: itrader
 #  config_file: itrader.yml
 #- name: stoxmarket
@@ -27,7 +27,7 @@ brands:
 #  config_file: kbcapitals.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
-- name: brokerxp
-  config_file: brokerxp.yml
+#- name: brokerxp
+#  config_file: brokerxp.yml
 #- name: fm-fx
 #  config_file: fm-fx.yml
