--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,6 +1,6 @@
 tests_config:
 
-  ####General
+  ###General
 - module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
   class: FilterModulesTest
   tests:
@@ -86,7 +86,7 @@ tests_config:
     - test_check_all_tab_from_financial_transactions
     - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
     - test_check_search_via_button # Check search using search button
-##Campaign module
+#Campaign module
 - module: src.test.python.ui.automation.implementation.crm.tests_compaigns_module.Test_Campaigns_Module
   class: CampaignsModuleTest
   tests:
