OF_add_api_tests_28_01: start added api tests

--- a/src/test/python/resources/config/brands10.yml
+++ b/src/test/python/resources/config/brands10.yml
@@ -1,5 +1,5 @@
 brands:
 - name: soarfx
   config_file: soarfx.yml
-#- name: brokerxp
-#  config_file: brokerxp.yml
+- name: brokerxp
+  config_file: brokerxp.yml
