--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,22 +1,22 @@
 brands:
-- name: kayafx
-  config_file: kaya_fx.yml
+#- name: kayafx
+#  config_file: kaya_fx.yml
 #- name: itrader
 #  config_file: itrader.yml
 #- name: stoxmarket
 #  config_file: stoxmarket.yml
-#- name: otcapital
-#  config_file: otcapital.yml
+- name: otcapital
+  config_file: otcapital.yml
 #- name: gmo
 #  config_file: gmo.yml
 #- name: triomarkets
 #  config_file: triomarkets.yml
 #- name: rimarkets
 #  config_file: rimarkets.yml
-#- name: itrader_global
-#  config_file: itrader_global.yml
-#- name: finmarket
-#  config_file: finmarket.yml
+- name: itrader_global
+  config_file: itrader_global.yml
+- name: finmarket
+  config_file: finmarket.yml
 #- name: mlnfx
 #  config_file: mlnfx.yml
 #- name: fxpmarkets
