--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 
-- name: goldenmarkets
-  config_file: goldenmarkets.yml
+#- name: goldenmarkets
+#  config_file: goldenmarkets.yml
 #- name: safemarkets
 #  config_file: safemarkets.yml
 #- name: b-traderfx
@@ -46,8 +46,8 @@ brands:
 #  config_file: kontofx.yml
 #- name: xtraderfx
 #  config_file: xtraderfx.yml
-#- name: firstindex
-#  config_file: firstindex.yml
+- name: firstindex
+  config_file: firstindex.yml
 #- name: coinstec
 #  config_file: coinstec.yml
 #- name: tradospot
