--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,24 +1,24 @@
 tests_config:
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Autorization_Process
-#  class: AutorizationProcess
-#  tests:
-#    - test_autorization_process
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Autorization_Process
+  class: AutorizationProcess
+  tests:
+    - test_autorization_process
 
 - module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
   class: CreateNewCustomer
   tests:
     - test_create_new_customer
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customer_Details
-#  class: ReadCustomerDetails
-#  tests:
-#    - test_read_customer_details
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customer_Details
+  class: ReadCustomerDetails
+  tests:
+    - test_read_customer_details
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customers_Details
-#  class: ReadCustomersDetails
-#  tests:
-#    - test_read_customers_details
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customers_Details
+  class: ReadCustomersDetails
+  tests:
+    - test_read_customers_details
 
 - module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Update_Customer
   class: UpdateCustomer
@@ -35,10 +35,10 @@ tests_config:
   tests:
     - test_read_leads_api
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Login_Token
-#  class: LoginToken
-#  tests:
-#    - test_login_token
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Login_Token
+  class: LoginToken
+  tests:
+    - test_login_token
 
 
   ###General
