--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,14 +1,14 @@
 tests_config:
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Autorization_Process
-#  class: AutorizationProcess
-#  tests:
-#    - test_autorization_process
-
-- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
-  class: CreateNewCustomer
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Autorization_Process
+  class: AutorizationProcess
   tests:
-    - test_create_new_customer
+    - test_autorization_process
+
+#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
+#  class: CreateNewCustomer
+#  tests:
+#    - test_create_new_customer
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customer_Details
 #  class: ReadCustomerDetails
@@ -20,25 +20,25 @@ tests_config:
 #  tests:
 #    - test_read_customers_details
 
-- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Update_Customer
-  class: UpdateCustomer
-  tests:
-    - test_update_customer
-
-- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_Lead
-  class: CreateLead
-  tests:
-    - test_create_lead_api
+#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Update_Customer
+#  class: UpdateCustomer
+#  tests:
+#    - test_update_customer
+#
+#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_Lead
+#  class: CreateLead
+#  tests:
+#    - test_create_lead_api
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Leads
 #  class: ReadLeads
 #  tests:
 #    - test_read_leads_api
 
-- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Login_Token
-  class: LoginToken
-  tests:
-    - test_login_token
+#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Login_Token
+#  class: LoginToken
+#  tests:
+#    - test_login_token
   ###General
 #- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
 #  class: FilterModulesTest
