OF_add_api_tests_28_01: start added api tests

--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -5,40 +5,40 @@ tests_config:
   tests:
     - test_autorization_process
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
-#  class: CreateNewCustomer
-#  tests:
-#    - test_create_new_customer
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
+  class: CreateNewCustomer
+  tests:
+    - test_create_new_customer
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customer_Details
-#  class: ReadCustomerDetails
-#  tests:
-#    - test_read_customer_details
-#
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customers_Details
-#  class: ReadCustomersDetails
-#  tests:
-#    - test_read_customers_details
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customer_Details
+  class: ReadCustomerDetails
+  tests:
+    - test_read_customer_details
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Update_Customer
-#  class: UpdateCustomer
-#  tests:
-#    - test_update_customer
-#
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_Lead
-#  class: CreateLead
-#  tests:
-#    - test_create_lead_api
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customers_Details
+  class: ReadCustomersDetails
+  tests:
+    - test_read_customers_details
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Leads
-#  class: ReadLeads
-#  tests:
-#    - test_read_leads_api
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Update_Customer
+  class: UpdateCustomer
+  tests:
+    - test_update_customer
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Login_Token
-#  class: LoginToken
-#  tests:
-#    - test_login_token
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_Lead
+  class: CreateLead
+  tests:
+    - test_create_lead_api
+
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Leads
+  class: ReadLeads
+  tests:
+    - test_read_leads_api
+
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Login_Token
+  class: LoginToken
+  tests:
+    - test_login_token
   ###General
 #- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
 #  class: FilterModulesTest
