--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -3,42 +3,42 @@ brands:
   config_file: 2mercados.yml
 - name: royal_cfds
   config_file: royal_cfds.yml
-- name: 4xfx
-  config_file: 4xfx.yml
-- name: coinstec
-  config_file: coinstec.yml
-- name: firstindex
-  config_file: firstindex.yml
-- name: mpcrypto
-  config_file: mpcrypto.yml
-- name: b-finance
-  config_file: b-finance.yml
-- name: aztrades
-  config_file: aztrades.yml
-- name: brokerz
-  config_file: brokerz.yml
-- name: eafx
-  config_file: eafx.yml
-- name: goldenmarkets
-  config_file: goldenmarkets.yml
-- name: herdos
-  config_file: herdos.yml
-- name: solocapitals
-  config_file: solocapitlas.yml
-- name: tradospot
-  config_file: tradospot.yml
-- name: olympusmarkets
-  config_file: olympusmarkets.yml
-- name: jonesmutual
-  config_file: jonesmutual.yml
-- name: xtraderfx
-  config_file: xtraderfx.yml
-- name: swiftcfd
-  config_file: swiftcfd.yml
-- name: newrichmarkets
-  config_file: newrichmarkets.yml
-- name: q8
-  config_file: q8.yml
+#- name: 4xfx
+#  config_file: 4xfx.yml
+#- name: coinstec
+#  config_file: coinstec.yml
+#- name: firstindex
+#  config_file: firstindex.yml
+#- name: mpcrypto
+#  config_file: mpcrypto.yml
+#- name: b-finance
+#  config_file: b-finance.yml
+#- name: aztrades
+#  config_file: aztrades.yml
+#- name: brokerz
+#  config_file: brokerz.yml
+#- name: eafx
+#  config_file: eafx.yml
+#- name: goldenmarkets
+#  config_file: goldenmarkets.yml
+#- name: herdos
+#  config_file: herdos.yml
+#- name: solocapitals
+#  config_file: solocapitlas.yml
+#- name: tradospot
+#  config_file: tradospot.yml
+#- name: olympusmarkets
+#  config_file: olympusmarkets.yml
+#- name: jonesmutual
+#  config_file: jonesmutual.yml
+#- name: xtraderfx
+#  config_file: xtraderfx.yml
+#- name: swiftcfd
+#  config_file: swiftcfd.yml
+#- name: newrichmarkets
+#  config_file: newrichmarkets.yml
+#- name: q8
+#  config_file: q8.yml
 
 
 
