--- a/src/test/python/resources/config/brands6.yml
+++ b/src/test/python/resources/config/brands6.yml
@@ -1,3 +1,5 @@
 brands:
-- name: ptbanc_ca
-  config_file: ptbanc_ca.yml
+- name: goldenmarkets
+  config_file: goldenmarkets.yml
+- name: herdos
+  config_file: herdos.yml
