--- a/src/test/python/resources/config/brands8.yml
+++ b/src/test/python/resources/config/brands8.yml
@@ -2,5 +2,5 @@ brands:
 
 - name: stoxmarket
   config_file: stoxmarket.yml
-#- name: kbcapitals
-#  config_file: kbcapitals.yml
+- name: kbcapitals
+  config_file: kbcapitals.yml
