--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -9,14 +9,14 @@ brands:
 #  config_file: stoxmarket.yml
 #- name: otcapital
 #  config_file: otcapital.yml
-- name: gmo
-  config_file: gmo.yml
+#- name: gmo
+#  config_file: gmo.yml
 #- name: triomarkets
 #  config_file: triomarkets.yml
 #- name: rimarkets
 #  config_file: rimarkets.yml
-#- name: itrader_global
-#  config_file: itrader_global.yml
+- name: itrader_global
+  config_file: itrader_global.yml
 #- name: finmarket
 #  config_file: finmarket.yml
 #- name: mlnfx
