NF_CA_v3: signup debug

--- a/src/main/python/ui/crm/model/BrandsXpath/goldenmarkets_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/goldenmarkets_xpath.yml
@@ -24,3 +24,5 @@ AffiliatePage:
   input_methods: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[5]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
   blocked_country_drop_down: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]"
   input_country: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
+CALoginPage:
+  check_box_accept: "//span[contains(text(),'By checking this box I accept')]"
