--- a/src/main/python/ui/crm/model/BrandsXpath/b-finance_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/b-finance_xpath.yml
@@ -5,3 +5,5 @@ FinancialTransactionsPage:
   transaction_type_drop_down: "//td[5]/div/div[1]/button"
   trading_account_element: "(//*[@id='listBody']//tr/td[3])[%s]//a"
   modified_time_element: "(//*[@id='listBody']//tr/td[12])[%s]"
+CALoginPage:
+  check_box_accept: "//span[contains(text(),'By checking this box I accept')]"
