--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,7 +1,7 @@
 brands:
 
-- name: firstindex
-  config_file: firstindex.yml
+#- name: firstindex
+#  config_file: firstindex.yml
 - name: mpcrypto
   config_file: mpcrypto.yml
 
