added check exist client in crm

--- a/src/test/python/resources/config/Brands/capitalmarketsbanc.yml
+++ b/src/test/python/resources/config/Brands/capitalmarketsbanc.yml
@@ -1,4 +1,4 @@
 pretty_name: "CapitalMarketsBanc"
 url: "https://capitalmarketsbanc.ptscrm.com/"
-
+url_ca: "https://my.capitalmarketbanc.com/en-us/login.aspx"
 otp_secret: TYP45DNKQL6JGIJX
