--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,3 +1,6 @@
 brands:
-- name: finmarket_ca
-  config_file: finmarket_ca.yml
+- name: soarfx
+  config_file: soarfx.yml
+- name: finmarket
+  config_file: finmarket.yml
+
