--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -4,6 +4,7 @@ tests_config:
   class: SignUpTest
   tests:
     - test_check_sign_up
+    - test_registred_client_exist_in_crm
 
   #General
 #- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
