--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,6 +1,6 @@
 brands:
-- name: gmo
-  config_file: gmo.yml
+#- name: gmo
+#  config_file: gmo.yml
 #- name: capitalmarketbanc
 #  config_file: capitalmarketbanc.yml
 #- name: itrader_global
@@ -21,8 +21,8 @@ brands:
 #  config_file: oinvestsa.yml
 #- name: kaya_fx
 #  config_file: kaya_fx.yml
-#- name: triomarkets
-#  config_file: triomarkets.yml
+- name: triomarkets
+  config_file: triomarkets.yml
 #- name: stoxmarket
 #  config_file: stoxmarket.yml
 #- name: itrader
