--- a/src/main/python/ui/crm/model/BrandsXpath/herdos_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/herdos_xpath.yml
@@ -4,6 +4,7 @@ ClientsPage:
   client_status_field: "//tr[@id='customAdvanceSearch']//td[3]//input[@class='form-control multiselect-search']"
   country_button: "//tr[@id='customAdvanceSearch']//td[8]//span[@class='multiselect-selected-text']"
   country_field: "//tr[@id='customAdvanceSearch']//td[8]//input[@class='form-control multiselect-search']"
+  client_phone: "//span[@id='dtlview_Phone']/div[@class='actions_btn']"
 TasksPage:
   pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
   subject_input: "//tr[@class='tableFilters']//td[15]//input"
