--- a/src/main/python/ui/crm/model/BrandsXpath/newrichmarkets_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/newrichmarkets_xpath.yml
@@ -5,6 +5,7 @@ ClientsPage:
   country_button: "//tr[@id='customAdvanceSearch']//td[8]//span[@class='multiselect-selected-text']"
   country_field: "//tr[@id='customAdvanceSearch']//td[8]//input[@class='form-control multiselect-search']"
   country_click: "//label[contains(text(),'%s')]"
+  client_phone: "//span[@id='dtlview_Phone']/div[@class='actions_btn']"
 TasksPage:
   pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
   subject_input: "//tr[@class='tableFilters']//td[15]//input"
