--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,8 +1,8 @@
 brands:
-- name: 2mercados
-  config_file: 2mercados.yml
-- name: royal_cfds
-  config_file: royal_cfds.yml
+#- name: 2mercados
+#  config_file: 2mercados.yml
+#- name: royal_cfds
+#  config_file: royal_cfds.yml
 #- name: 4xfx
 #  config_file: 4xfx.yml
 #- name: coinstec
@@ -27,12 +27,10 @@ brands:
 #  config_file: tradospot.yml
 #- name: jonesmutual
 #  config_file: jonesmutual.yml
-#- name: xtraderfx
-#  config_file: xtraderfx.yml
 #- name: swiftcfd
 #  config_file: swiftcfd.yml
-#- name: newrichmarkets
-#  config_file: newrichmarkets.yml
+- name: newrichmarkets
+  config_file: newrichmarkets.yml
 #- name: q8
 #  config_file: q8.yml
 #- name: firstindex
