--- a/src/test/python/resources/config/Brands/finmarket.yml
+++ b/src/test/python/resources/config/Brands/finmarket.yml
@@ -1,3 +1,3 @@
 pretty_name: "Finmarket"
 url: "https://finmarket.ptscrm.com/"
-url_ca: "https://my.finmarket.com"
+url_ca: "https://my.finmarket.com/Login/tabid/115/language/en-US/Default.aspx?returnurl=%2f"
