--- a/src/test/python/resources/config/Brands/oinvestsa.yml
+++ b/src/test/python/resources/config/Brands/oinvestsa.yml
@@ -1,3 +1,3 @@
 pretty_name: "Oinvestsa"
 url: "https://oinvestsa.ptscrm.com/"
-url_ca: "https://my.oinvest.co.za"
+url_ca: "https://my.oinvest.co.za/Login/tabid/115/language/en-US/Default.aspx?returnurl=%2f"
