--- a/src/main/python/ui/crm/model/BrandsXpath/q8_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/q8_xpath.yml
@@ -4,6 +4,7 @@ ClientsPage:
   client_status_field: "//tr[@id='customAdvanceSearch']//td[3]//input[@class='form-control multiselect-search']"
   country_button: "//tr[@id='customAdvanceSearch']//td[8]//span[@class='multiselect-selected-text']"
   country_field: "//tr[@id='customAdvanceSearch']//td[8]//input[@class='form-control multiselect-search']"
+  client_country: "//*[@id='tblAddressInformation']/table/tbody/tr[2]/td[4]/text()"
 TasksPage:
   pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
   subject_input: "//tr[@class='tableFilters']//td[15]//input"
@@ -16,3 +17,8 @@ FinancialTransactionsPage:
   modified_time_element: "(//*[@id='listBody']//tr/td[11])[%s]"
 ClientProfilePage:
   deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
+CALoginPage:
+  sign_up: "/html/body/header/div/div[2]/div[1]/div[1]/a[2]"
+  submit_btn: "/html/body/div[2]/div/div/form/input[2]"
+  login_email_input: "//input[@name='email']"
+  login_btn_2: "/html/body/div[2]/div/div[1]/form/input"
