--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -29,12 +29,20 @@ brands:
 #  config_file: jonesmutual.yml
 #- name: swiftcfd
 #  config_file: swiftcfd.yml
-- name: newrichmarkets
-  config_file: newrichmarkets.yml
+#- name: newrichmarkets
+#  config_file: newrichmarkets.yml
 #- name: q8
 #  config_file: q8.yml
 #- name: firstindex
 #  config_file: firstindex.yml
+#- name: b-finance
+#  config_file: b-finance.yml
+#- name: aztrades
+#  config_file: aztrades.yml
+#- name: brokerz
+#  config_file: brokerz.yml
+- name: q8
+  config_file: q8.yml
 
 
 
