--- a/src/test/python/resources/config/brands13.yml
+++ b/src/test/python/resources/config/brands13.yml
@@ -2,5 +2,5 @@ brands:
 
 - name: newrichmarkets
   config_file: newrichmarkets.yml
-#- name: q8
-#  config_file: q8.yml
+- name: q8
+  config_file: q8.yml
