--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,8 +1,8 @@
 brands:
-#- name: 2mercados
-#  config_file: 2mercados.yml
-#- name: royal_cfds
-#  config_file: royal_cfds.yml
+- name: 2mercados
+  config_file: 2mercados.yml
+- name: royal_cfds
+  config_file: royal_cfds.yml
 #- name: 4xfx
 #  config_file: 4xfx.yml
 #- name: coinstec
@@ -41,8 +41,8 @@ brands:
 #  config_file: aztrades.yml
 #- name: brokerz
 #  config_file: brokerz.yml
-- name: q8
-  config_file: q8.yml
+#- name: q8
+#  config_file: q8.yml
 
 
 
