--- a/src/test/python/resources/config/brands11.yml
+++ b/src/test/python/resources/config/brands11.yml
@@ -1,3 +1,5 @@
 brands:
-- name: xtraderfx
-  config_file: xtraderfx.yml
+#- name: xtraderfx
+#  config_file: xtraderfx.yml
+- name: q8
+  config_file: q8.yml
