--- a/src/test/python/resources/config/brands6.yml
+++ b/src/test/python/resources/config/brands6.yml
@@ -1,3 +1,6 @@
 brands:
-- name: goldenmarkets
-  config_file: goldenmarkets.yml
+
+- name: eafx
+  config_file: eafx.yml
+#- name: goldenmarkets
+#  config_file: goldenmarkets.yml
